fix: style pages z-index

--- a/src/theme/modules/structure/page/page.module.scss
+++ b/src/theme/modules/structure/page/page.module.scss
@@ -248,6 +248,7 @@
       overflow: hidden;
       position: relative;
       width: 100%;
+      z-index: 0;
     }
   }
 
